@@ -1,4 +1,1 @@
-DIST 0ad-0.0.11-alpha-unix-data.tar.xz 350967036 SHA256 a28dd9160637bc1345223ec6f9c36bb693350e9dcc35a3194f43ed463b3ba20e SHA512 26dc6ea00b67c64041f34fe55ad1280693eae7549161fd85ae1551945ccc5e2afb01ee8834f232d573c15c0d5c81875d047cc69885328bf34c365c554eb12124 WHIRLPOOL 2a37584a0c69132386a9312c77e4a82f2413065b3bcfbf4c3964c78f1bb564f6f099ff0f240591bbc25d07b9746ddc8c9cc7cf9ca3619ece05201253c2b91794
-EBUILD 0ad-data-0_alpha11.ebuild 663 SHA256 647192f0552827a1faf21e817fae9c39622088c262b043816b4daabb31003a58 SHA512 9d37e4bd94ddd555d8a271a484ac568e033a84d3b3a11d3f14dacd91184e193d3f15028dc57040ea57f4ad18e0f15257c56b73f23cc446d8b89c85c1f1a5991b WHIRLPOOL be38b5e507f17b5164fdb82c322304ae2039f7a04068990390417bafa31c3a200d962232541d707398597cb57a5d798a22635d6d6548855f2d5804cf2860482a
-MISC ChangeLog 347 SHA256 b6667ef61cd6250aa9d3ddc33245b5e7638ff238a3d0b94d481dea46a7d62df0 SHA512 c430f59bfba7058081c808e09b03f25123f965a80ac066e030b59010bc96673f6138981a7350535245829572a41ffbd384621b93e778ffe80675c056b2b1ab98 WHIRLPOOL 488f3e76409fc86a565f71f08af60b65302f28254d3c05d5c38b57726808091b4f54211dde8467243ccedde3bc6494c2d7c735a8b657d51a0330c0c91fe0142b
-MISC metadata.xml 237 SHA256 7aebf1a287d9d2d4fa5b66af4c801da2083b6bc7d3cd077c235869ade1fb960d SHA512 e9249ef4ab11f8463a54b559634717a35dcd23da7e4d233feb223f3db7847e0638a5a3c89fb23a05c567251dde2e796c2ce3cd1efd57ff1a513c6fe55f9978a8 WHIRLPOOL 01e3ce0b931af3ce0389559235d360f5278067cb93376de4bf06a4e640fe54619595ebde1b8c811b64cb2a3aeab2b61ed54052f6e33de9470342c4cd27ddd443
+DIST 0ad-0.0.14-alpha-unix-data.tar.xz 450006708 SHA256 e046531a55226a15784ce9c31df1d8e6723ad2cedd70a0abb63dc1721bf2a770 SHA512 ad07bed3bc4763e032c764ade24833b02420bec84333e732953df2298c727c5924bd752f7d25c2abcfe8dfe93f9890450983cb962045e039c292f91440b6bb83 WHIRLPOOL 36cfb532f027a4a82d0914984fa00e45a238edbd9de5219f58c9136f64d075308c51f895ce45ed81f985b038c0b7a6f1537eb185fa197f466555ff1400cb5cb2
